# electron_correction

./: .gitignore  CMakeLists.txt  README.md  a1954.json  e20009.json
a1954/: CMakeLists.txt  README.md  attpc.C  electrons.txt  gastable.C  hydrogen_300.gas
e20009/: README.md  attpc.C  deuterium_600.gas  electrons.txt  gastable.C
src/: CMakeLists.txt  Config.cpp  Config.h  GenerateCorrection.cpp  GenerateCorrection.h  GenerateGas.cpp  GenerateGas.h  main.cpp
